--- a/PnbPartKeepr/templates/PnbPartKeepr/footprintcategory_list.html
+++ b/PnbPartKeepr/templates/PnbPartKeepr/footprintcategory_list.html
@@ -31,7 +31,7 @@
         <td>{{ e.id }}</td>
         {% include "PnbPartKeepr/cell_name_link.html"               with elem=e %}
         {% include "PnbPartKeepr/cell_descendant_link.html"         with elem=e %}
-        {% include "PnbPartKeepr/cell_category_content_link.html"   with elem=e urlName="pnbpartkeepr.footprint.list" %}
+        {% include "PnbPartKeepr/cell_category_content_link.html"   with elem=e %}
         {% include "PnbPartKeepr/cell_description.html"             with elem=e %}
         {% include "PnbPartKeepr/cell_name_link.html"               with elem=e.parent %}
         {% include "PnbPartKeepr/cell_action.html"                  with elem=e %}
