--- a/PnbPartKeepr/templates/PnbPartKeepr/cell_name_link.html
+++ b/PnbPartKeepr/templates/PnbPartKeepr/cell_name_link.html
@@ -1,12 +1,7 @@
 {% load i18n %}
 
-{% comment %}
-{% include 'PnbPartKeepr/cell_name.html' %}
-{% include 'PnbPartKeepr/cell_link.html' %}
-{% endcomment %}
-
 {% if elem %}
-    <td class="pnbpartkeepr-elem-list-link"
+    <td class="pnbpartkeepr-cell pnbpartkeepr-cell-link"
      onclick="document.location='{{ elem.get_absolute_url }}';" >
         <a href={{ elem.get_absolute_url }} >
             {{ elem.name }}
