remove euro symbole in doublon

--- a/PnbPartKeepr/templates/PnbPartKeepr/cell_price.html
+++ b/PnbPartKeepr/templates/PnbPartKeepr/cell_price.html
@@ -1,8 +1,4 @@
 {% load i18n %}
         
-<td>
-    {{ price|default:"--" }}
-    <span class="fas fa-euro-sign">
-    </span>
-</td>
+<td>{{ price|default:"--" }}</td>
 
